@@ -1,3 +1,5 @@
+2006/5/25 -- released version 20060525_trunk
+
 2006/5/24 -- released version 20060524_trunk
 
 2006/5/23 -- released version 20060523_trunk
